-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 25
-
Component/s: hotspot
-
b25
While working on improving the TLAB sizing code for ZGC I ran into an issue with the following tests failing:
serviceability/jvmti/HeapMonitor/MyPackage/HeapMonitorInterpreterObjectTest.java
serviceability/jvmti/HeapMonitor/MyPackage/HeapMonitorStatObjectCorrectnessTest.java
The reason for seeing the problems now is that with the new sizing code ZGC will use smaller TLAB at first, before resizing them to a proper size (to lower the waste). In the HeapMonitor tests we don't allocate enough to trigger GCs that will resize the TLABs so most of the tests will now run with small TLABs. This should not be a problem, but it turns out the current sampling code is not working properly when you get a lot of outside TLAB allocations. You get those when trying to allocate a fairly large object (~1400B) that won't fit into the TLAB, but there are still quite a bit of room in the TLAB so we don't want to throw it away and take a new one.
The problem in the current code is that we keep track of when to sample with multiple variables and when getting out of TLAB allocations these get out of sync. Me and StefanK have been looking into the code and have ideas on how to improve the code structure (currently a mesh) and fix the issue.
serviceability/jvmti/HeapMonitor/MyPackage/HeapMonitorInterpreterObjectTest.java
serviceability/jvmti/HeapMonitor/MyPackage/HeapMonitorStatObjectCorrectnessTest.java
The reason for seeing the problems now is that with the new sizing code ZGC will use smaller TLAB at first, before resizing them to a proper size (to lower the waste). In the HeapMonitor tests we don't allocate enough to trigger GCs that will resize the TLABs so most of the tests will now run with small TLABs. This should not be a problem, but it turns out the current sampling code is not working properly when you get a lot of outside TLAB allocations. You get those when trying to allocate a fairly large object (~1400B) that won't fit into the TLAB, but there are still quite a bit of room in the TLAB so we don't want to throw it away and take a new one.
The problem in the current code is that we keep track of when to sample with multiple variables and when getting out of TLAB allocations these get out of sync. Me and StefanK have been looking into the code and have ideas on how to improve the code structure (currently a mesh) and fix the issue.
- links to
-
Commit(master)
openjdk/jdk/a919f6d0
-
Review(master)
openjdk/jdk/25114