8356372: JVMTI heap sampling not working properly with outside TLAB allocations